syntax = "proto3";

package pl.stirling.dynamic_tracing.ir.shared;

option go_package = "pixielabs.ai/pixielabs/src/stirling/dynamic_tracing/ir/sharedpb";

// Describes where to attach a probe.
message TracePoint {
  string symbol = 1;

  enum Type {
    // Only for logical IR.
    LOGICAL = 0;

    // Intermediate and physical IR uses this to specify a BPF entry probe.
    ENTRY = 1;

    // Intermediate and physical IR uses this to specify a BPF return probe.
    RETURN = 2;
  }

  // This has to be LOGICAL for logical IR.
  Type type = 2;
}

// This cannot replace class UPID in src/shared/metadata/base_types.h, because the C++ UPID is
// created to be compatible with Arrow and uses uint128 for efficient processing.
message UPID {
  // A unique ID for a particular agent.
  uint32 asid = 1;

  // The PID of the running process on a particular node.
  uint32 pid = 2;

  // The start time stamp of the process, used to distinguish between processes having the same
  // PID across different time frame.
  uint64 ts_ns = 3;
}

message DeploymentSpec {
  oneof target_oneof {
    // The path of the executable file.
    string path = 1;

    // The UPID of a running process.
    UPID upid = 3;
  }

  enum Language {
    // Automatically infer the language (default).
    AUTO = 0;
    C = 1;
    CPP = 2;
    GOLANG = 3;
  }

  // The language in which the binary was written.
  // For now, must manually specify the language, so please avoid AUTO.
  Language language = 2;
}

// All enum values must be consecutive, as they are used as array index in codegen.
enum BPFHelper {
  GOID = 0;
  TGID = 1;
  TGID_PID = 2;
  TGID_START_TIME = 3;

  // Return the kernel time in nanoseconds.
  KTIME = 4;
}

enum ScalarType {
  UNKNOWN = 0;

  BOOL = 1;
  INT = 2;
  INT8 = 3;
  INT16 = 4;
  INT32 = 5;
  INT64 = 6;
  UINT = 7;
  UINT8 = 8;
  UINT16 = 9;
  UINT32 = 10;
  UINT64 = 11;
  FLOAT = 12;
  DOUBLE = 13;

  VOID_POINTER = 100;

  STRING = 200;
  BYTE_ARRAY = 201;
}

// Wraps an oneof field which can be either scalar or struct.
message VariableType {
  oneof type_oneof {
    ScalarType scalar = 2;
    string struct_type = 3;
  }
}

// Describe a BPF map.
// Corresponds to px.Map().
message Map {
  string name = 1;

  // TODO(yzhao): Remove the following 2 lines and create PerfBuffer in physical.proto with them.
  VariableType key_type = 2; // Exclusive to physical IR.
  VariableType value_type = 3; // Exclusive to physical IR.
}

// Describes a condition to be checked.
message Condition {
  enum Op {
    // NIL means this condition should be ignored.
    NIL = 0;
    EQUAL = 1;
  }

  // Describes the operation performed on the variables listed below.
  Op op = 1;

  // List variables used in the operation.
  repeated string vars = 2;
}

// bpf_trace_printk() on a text.
message Printk {
  oneof content_oneof {
    // A piece of hardcoded text.
    string text = 1;

    // Another ScalarVariable, cannot be StructVariable.
    string scalar = 2;
  }
}

// Indicates a variable named 'id' should be generated, and represents the latency from function
// entry to return.
message FunctionLatency { string id = 1; }
